sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value i
 if (plusPetit(i+1,i)==true) {
               ^AlgBubbleSort1:3: error: not found: value i
 if (plusPetit(i+1,i)==true) {
                   ^AlgBubbleSort1:4: error: not found: value i
   echange(i+1,i);
           ^AlgBubbleSort1:4: error: not found: value i
   echange(i+1,i);
               ^