sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
 if (plusPetit(i+1,i)==true) {
   echange(i+1,i);
 } 
}